--- a/index.html
+++ b/index.html
@@ -65,14 +65,22 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Clarence
-            <span class="text-primary">Taylor</span>
+          <h1 class="mb-0">Seongjun
+            <span class="text-primary">Choi</span>
           </h1>
-          <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-            <a href="mailto:name@email.com">name@email.com</a>
+          <div class="subheading mb-5"> <i>DrawingProcess</i> · (010) 7372-8392 ·
+            <a href="mailto:csj000714@khu.ac.kr">csj000714@khu.ac.kr</a>
           </div>
-          <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="mb-5">안녕하세요. DAVI Lab에서 ML/DL을 공부하는 최성준입니다.</br>꾸준함이 중요하기에 1Day 1Commit, 1Day 1Posting 등 실천하고 있습니다.</br>개발자 컨퍼런스, 커뮤니티에 관심이 많으며, Maker 활동을 즐깁니다.</p>
           <ul class="list-inline list-social-icons mb-0">
+            <li class="list-inline-item">
+              <a href="#">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fas fa-id-card fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
             <li class="list-inline-item">
               <a href="#">
                 <span class="fa-stack fa-lg">
