--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <a href="https://www.notion.so/6114dce07437453ea72b2d003efd24fd/">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="far fa-id-card fa-stack-1x fa-inverse"></i>
+                  <i class="fa fa-id-card fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
             </li>
@@ -93,7 +93,7 @@
               <a href="https://csj000714.tistory.com/">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fas fa-pencil fa-stack-1x fa-inverse"></i>
+                  <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
             </li>
@@ -101,7 +101,7 @@
               <a href="https://www.youtube.com/channel/UC61RSyqJK8I42EyVCSlJCqw/">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-youtube fa-stack-1x fa-inverse"></i>
+                  <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
             </li>
