--- a/index.html
+++ b/index.html
@@ -72,12 +72,14 @@
             <a href="mailto:csj000714@khu.ac.kr">csj000714@khu.ac.kr</a>
           </div>
           <p class="mb-5">안녕하세요. DAVI Lab에서 ML/DL을 공부하는 최성준입니다.</br>꾸준함이 중요하기에 1Day 1Commit, 1Day 1Posting 등 실천하고 있습니다.</br>개발자 컨퍼런스, 커뮤니티에 관심이 많으며, Maker 활동을 즐깁니다.</p>
+          {% comment %} Ref: https://fontawesome.com/v5.15/icons?d=gallery&p=2 {% endcomment %}
+          {% comment %} Style Ref: https://coding-factory.tistory.com/192 {% endcomment %}
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.notion.so/6114dce07437453ea72b2d003efd24fd/">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-id-card fa-stack-1x fa-inverse"></i>
+                  <i class="fa fa-id-card fa-stack-1x fa-inverse"></i> /
                 </span>
               </a>
             </li>
