--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Start Bootstrap</span>
         <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile1.jpg" alt="">
+          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
         </span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,9 +62,8 @@
     </nav>
 
     <div class="container-fluid p-0">
-
-      {% comment %} Ref: https://fontawesome.com/v5.15/icons?d=gallery&p=2 {% endcomment %}
-      {% comment %} Style Ref: https://coding-factory.tistory.com/192 {% endcomment %}
+      <!-- Ref: https://fontawesome.com/v5.15/icons?d=gallery&p=2 
+           Style Ref: https://coding-factory.tistory.com/192 -->
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
           <h1 class="mb-0">Seongjun
