--- a/index.html
+++ b/index.html
@@ -157,12 +157,12 @@
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
+              <h3 class="mb-0">DAVI Lab (Data Analysis and Vision Intelligence)</h3>
+              <div class="subheading mb-3">Undergraduate research student</div>
               <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">September 2008 - June 2010</span>
+              <span class="text-primary">December 2019 - Present</span>
             </div>
           </div>
 
