--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
           <div class="subheading mb-5"> <i>DrawingProcess</i> · (010) 7372-8392 ·
             <a href="mailto:csj000714@khu.ac.kr">csj000714@khu.ac.kr</a>
           </div>
-          <p class="mb-5">안녕하세요. DAVI Lab에서 ML/DL을 공부하는 최성준입니다.</br>꾸준함이 중요하기에 1Day 1Commit, 1Day 1Posting 등 실천하고 있습니다.</br>개발자 컨퍼런스, 커뮤니티에 관심이 많으며, Maker 활동을 즐깁니다.</p>
+          <p class="mb-5">안녕하세요! DAVI Lab에서 ML/DL을 공부하며 로봇 Vision 프로그래머를 꿈꾸는 최성준입니다.</br>로봇에 관심이 많아 OROCA 커뮤니티에서 활동 중이며, 다양한 개발자 컨퍼런스를 통해 트랜드에 뒤쳐지지 않으려 관심을 갖고 있습니다. 또한 아두이노나 라즈베리파이를 이용한 Making 활동을 즐깁니다.</br>또한 습관의 중요성을 알기에 '1Day 1Commit'을 실천하며 개발의 감을 잃지 않으려 노력하고 있으며, '1Day 1Posting'으로 최신 동향, 책 및 논문 리뷰, Tech 정리 등 다양한 내용의 블로그를 운영하고 있습니다.</br><i>"Deeply Learning like Learning Machine"</i></p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.notion.so/6114dce07437453ea72b2d003efd24fd/">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-id-card fa-stack-1x fa-inverse"></i> /
+                  <i class="fa fa-id-card fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
             </li>
@@ -122,39 +122,6 @@
         <div class="my-auto">
           <h2 class="mb-5">Experience</h2>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Senior Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">March 2013 - Present</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
-            </div>
-          </div>
-
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">DAVI Lab (Data Analysis and Vision Intelligence)</h3>
@@ -163,6 +130,17 @@
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">December 2019 - Present</span>
+            </div>
+          </div>
+          
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Senior Web Developer</h3>
+              <div class="subheading mb-3">Intelitec Solutions</div>
+              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">March 2013 - Present</span>
             </div>
           </div>
 
@@ -176,24 +154,25 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
+              <h3 class="mb-0">University of Kyung Hee</h3>
               <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+              <div>Software Convergence - Future Vehicle &amp; Robot Track</div>
+              <p>GPA: 3.6</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <span class="text-primary">March 2019 - Present, 3rd grade</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
+              <h3 class="mb-0">Uncheon High School</h3>
+              <div class="subheading mb-3">Think Creative Club (Robot &amp; Maker)</div>
+              <div class="subheading mb-3">Sigma Inventure Club (Invent &amp; Startups)</div>
+              <p>GPA: 2.1</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">March 2016 - February 2019</span>
             </div>
           </div>
 
@@ -205,56 +184,28 @@
           <h2 class="mb-5">Skills</h2>
 
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-          <ul class="list-inline list-icons">
-            <li class="list-inline-item">
-              <i class="devicons devicons-html5"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-css3"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-javascript"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-jquery"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-sass"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-less"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-bootstrap"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-wordpress"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-grunt"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-gulp"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-npm"></i>
-            </li>
-          </ul>
-
-          <div class="subheading mb-3">Workflow</div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
+              Develop Environment - Window, Linux(Ubuntu, Raspbian)</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
+              Language - Python(Library), C/C++(Algorithm), Matlab(Math), Java(Android Studio) + Web</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
+              Database - Oracle Live SQL, MySQL</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
+              DevOps - Docker, Kubernetes</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Virtualization - VMware, Oracle VirtualBox</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Version Control - Git, Github, SourceTree</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Version Control - Git, Github, SourceTree</li>
           </ul>
         </div>
       </section>
@@ -276,28 +227,36 @@
               Google Analytics Certified Developer</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Mobile Web Specialist - Google Certification</li>
+              4<sup>rd</sup>
+              Place - University of Kyung Hee - 봄 프로그래밍 경시대회 [21.05.15.]</li>
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              Junior award &amp; Famous award - University of Kyung Hee - SW Festival 2020 [20.11.30.-20.12.02.]</li>
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              10<sup>rd</sup>
+              Place - University of Kyung Hee - KHUthon 2020 [20.11.13.-20.11.14.]</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               1<sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
+              Place - University of Sung Kyun Kwan - 대학생 자율주행차 융합설계 경진대회 [19.08.20.-19.08.23.]</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
+              Best Tech award - #128 - NEWB!ETHON [19.05.04.-19.05.05.]</li>
             <li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               1<sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
+              Place Inspire award &amp; judge award - FEST Foundation - First Tech Challenge [17.03.-18.01.27.]</li>
+            <li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
+              Place Think award - FEST Foundation - First Tech Challenge [17.03.-18.01.27.]</li>
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              3<sup>rd</sup>
+              Place - HSBC-JA Korea - Company Of the Year (COY) [17.03.17.-17.11.30.]</li>
           </ul>
         </div>
       </section>
