--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               <span class="text-primary">December 2019 - Present</span>
             </div>
           </div>
-          
+
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Senior Web Developer</h3>
@@ -158,6 +158,28 @@
               <div class="subheading mb-3">Bachelor of Science</div>
               <div>Software Convergence - Future Vehicle &amp; Robot Track</div>
               <p>GPA: 3.6</p>
+              <ul class="fa-ul mb-0">
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Programming (Web-Python Prog-, Object-Oriented Prog-, Data Structure, Algorithm Analysis)</li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  Math (Calculus, Linear Algebra, Probability Random Processing, Signal System)</li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  DevOps (SW Convergence Introduction, SW Development Method &amp; Tools, Data-Center Prog-, SW Engineering)</br> \
+                  : Develop Process (like Agile), Collaboration tools (like Git), Docker, Kubernetes</li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  AI (Numerical-Analysis Prog-, Deep Learning, New Creature: AI)</br> \
+                  : Mathematical Programming, Knowledge of artificial intelligence</li>
+                <li>
+                  <i class="fa-li fa fa-check"></i>
+                  AI (Numerical-Analysis Prog-, Deep Learning, New Creature: AI)</br> \
+                  : Mathematical Programming, Knowledge of artificial intelligence</li>
+              </ul>
+              
+
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">March 2019 - Present, 3rd grade</span>
@@ -167,9 +189,9 @@
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Uncheon High School</h3>
-              <div class="subheading mb-3">Think Creative Club (Robot &amp; Maker)</div>
-              <div class="subheading mb-3">Sigma Inventure Club (Invent &amp; Startups)</div>
-              <p>GPA: 2.1</p>
+              <div>Think Creative Club (Robot &amp; Maker)</div>
+              <div>Sigma Inventure Club (Invent &amp; Startups)</div>
+              <p>GPA: 2.1 (1~9, Grade 1 is the highest grade.)</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">March 2016 - February 2019</span>
@@ -187,25 +209,25 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Develop Environment - Window, Linux(Ubuntu, Raspbian)</li>
+              <b>Develop Environment</b> - Window, Linux(Ubuntu, Raspbian)</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Language - Python(Library), C/C++(Algorithm), Matlab(Math), Java(Android Studio) + Web</li>
+              <b>Language</b> - Python(Library), C/C++(Algorithm), Matlab(Math), Java(Android Studio) + Web</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Database - Oracle Live SQL, MySQL</li>
+              <b>Database</b> - Oracle Live SQL, MySQL</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              DevOps - Docker, Kubernetes</li>
+              <b>DevOps</b> - Docker, Kubernetes</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Virtualization - VMware, Oracle VirtualBox</li>
+              <b>Virtualization</b> - VMware, Oracle VirtualBox</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Version Control - Git, Github, SourceTree</li>
+              <b>Version Control</b> - Git, Github, SourceTree</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Version Control - Git, Github, SourceTree</li>
+              <b>Collaboration</b> - Slack, Notion, Asana, Trello</li>
           </ul>
         </div>
       </section>
