--- a/index.html
+++ b/index.html
@@ -161,22 +161,22 @@
               <ul class="fa-ul mb-0">
                 <li>
                   <i class="fa-li fa fa-check"></i>
-                  Programming (Web-Python Prog-, Object-Oriented Prog-, Data Structure, Algorithm Analysis)</li>
+                  Programming (Web-Python, Object-Oriented, Data Structure, Algorithm Analysis)</li>
                 <li>
                   <i class="fa-li fa fa-check"></i>
                   Math (Calculus, Linear Algebra, Probability Random Processing, Signal System)</li>
                 <li>
                   <i class="fa-li fa fa-check"></i>
-                  DevOps (SW Convergence Introduction, SW Development Method &amp; Tools, Data-Center Prog-, SW Engineering)</br> \
+                  DevOps (SW Convergence Introduction, SW Development Method &amp; Tools, Data-Center, SW Engineering)</br>
                   : Develop Process (like Agile), Collaboration tools (like Git), Docker, Kubernetes</li>
                 <li>
                   <i class="fa-li fa fa-check"></i>
-                  AI (Numerical-Analysis Prog-, Deep Learning, New Creature: AI)</br> \
+                  AI (Numerical-Analysis, Deep Learning, New Creature: AI)</br>
                   : Mathematical Programming, Knowledge of artificial intelligence</li>
                 <li>
                   <i class="fa-li fa fa-check"></i>
-                  AI (Numerical-Analysis Prog-, Deep Learning, New Creature: AI)</br> \
-                  : Mathematical Programming, Knowledge of artificial intelligence</li>
+                  Robot (Electronic circuit, Future Vehicle &amp; Robot)</br>
+                  : Circuit, Sensor, ROS, Autonomous (part of SLAM algorithm)</li>
               </ul>
               
 
