--- a/index.html
+++ b/index.html
@@ -249,14 +249,14 @@
               Google Analytics Certified Developer</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              4<sup>rd</sup>
+              4<sup>th</sup>
               Place - University of Kyung Hee - 봄 프로그래밍 경시대회 [21.05.15.]</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               Junior award &amp; Famous award - University of Kyung Hee - SW Festival 2020 [20.11.30.-20.12.02.]</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              10<sup>rd</sup>
+              10<sup>th</sup>
               Place - University of Kyung Hee - KHUthon 2020 [20.11.13.-20.11.14.]</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
