fix: change email

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <span class="text-primary">Choi</span>
           </h1>
           <div class="subheading mb-5"> <i>DrawingProcess</i> · (010) 7372-8392 ·
-            <a href="mailto:csj000714@khu.ac.kr">csj000714@khu.ac.kr</a>
+            <a href="mailto:sjchoi.dp@gmail.com">sjchoi.dp@gmail.com</a>
           </div>
           <p class="mb-5">안녕하세요! DAVI Lab에서 ML/DL을 공부하며 로봇 Vision 프로그래머를 꿈꾸는 최성준입니다.</br>로봇에 관심이 많아 OROCA 커뮤니티에서 활동 중이며, 다양한 개발자 컨퍼런스를 통해 트랜드에 뒤쳐지지 않으려 관심을 갖고 있습니다. 또한 아두이노나 라즈베리파이를 이용한 Making 활동을 즐깁니다.</br>또한 습관의 중요성을 알기에 '1Day 1Commit'을 실천하며 개발의 감을 잃지 않으려 노력하고 있으며, '1Day 1Posting'으로 최신 동향, 책 및 논문 리뷰, Tech 정리 등 다양한 내용의 블로그를 운영하고 있습니다.</br><i>"Deeply Learning like Learning Machine"</i></p>
           <ul class="list-inline list-social-icons mb-0">
