Add Project page

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                         </p>
                         <p><em> IEEE 43rd International Conference on Consumer Electronics (ICCE) 2025</em></p>
                         <p><a href="./data/paper/[KCC 2024] NeRF의 깊이 추정 시 뷰디렉션 설정의 중요성 연구.docx.pdf">Paper</a>&nbsp;|&nbsp;
-                            <a href="https://github.com/DrawingProcess/InfoFusionController">Code</a></p>
-                        </p>
+                            <a href="https://github.com/DrawingProcess/InfoFusionController">Code</a>&nbsp;|&nbsp;
+                            <a href="https://drawingprocess.github.io/InfoFusionController">Project Page</a>
                         </p>
                     </div>
 
@@ -147,7 +147,8 @@
                         </p>
                         <p><em>Korea Software Congress (KSC) 2024</em></p>
                         <p><a href="./data/paper/[KCC 2024] NeRF의 깊이 추정 시 뷰디렉션 설정의 중요성 연구.docx.pdf">Paper</a>&nbsp;|&nbsp;
-                            <a href="https://github.com/DrawingProcess/non-glare-nerf">Code</a></p>
+                            <a href="https://github.com/DrawingProcess/non-glare-nerf">Code</a>&nbsp;|&nbsp;
+                            <a href="https://drawingprocess.github.io/non-glare-nerf">Project Page</a>
                         </p>
                     </div>
 
@@ -162,7 +163,8 @@
                         </p>
                         <p><em>Korea Software Congress (KSC) 2024</em></p>
                         <p><a href="./data/paper/[KCC 2024] NeRF의 깊이 추정 시 뷰디렉션 설정의 중요성 연구.docx.pdf">Paper</a>&nbsp;|&nbsp;
-                            <a href="https://github.com/DrawingProcess/Codebook-NeRF">Code</a></p>
+                            <a href="https://github.com/DrawingProcess/Codebook-NeRF">Code</a>&nbsp;|&nbsp;
+                            <a href="https://drawingprocess.github.io/Codebook-NeRF">Project Page</a>
                         </p>
                     </div>
 
