Update: file name

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="exp-list">
                     <ul>
                         <li>&#x2022;&nbsp (2024.11.) 
-                            A paper about Autonomous path planning is accepted to <b>ICCE 2025</b>.
+                            A paper about Autonomous path planning is accepted to <b>ICCE 2025 (Oral)</b>.
                         </li>
                         <li>&#x2022;&nbsp (2024.11.) 
                             Two paper got accepted to <b>KSC 2024</b>.
@@ -121,7 +121,7 @@
             <div class="col-12">
                 <div class="row justify-content-center pub-item">
                     <div class="col-md-4 paper-thumbnail">
-                        <img src="data/paper_thumbnail/ICCE2025_infofusion-controller.png" alt="ICCE2025_infofusion-controller" class="img-fluid mx-auto"
+                        <img src="data/paper_thumbnail/ICCE2025_InfoFusionController.png" alt="ICCE2025_InfoFusionController class="img-fluid mx-auto"
                             style="width: 90%; height: auto; display: block;">
                     </div>
                     <div class="col-md-8 paper-info">
@@ -129,7 +129,7 @@
                         InfoFusion Controller: Informed TRRT Star with Mutual Information based on Fusion of Pure Pursuit and MPC for Enhanced Path Planning
                         <p class="text-muted"><u>Seongjun Choi</u>, Youngbum Kim, Nam Woo Kim, Mansun Shin, Byunggi Chae, Sungjin Lee,
                         </p>
-                        <p><em> IEEE 43rd International Conference on Consumer Electronics (ICCE) 2025</em></p>
+                        <p><em> IEEE 43rd International Conference on Consumer Electronics (ICCE) 2025 (Oral)</em></p>
                         <p><a href="./data/paper/[KCC 2024] NeRF의 깊이 추정 시 뷰디렉션 설정의 중요성 연구.docx.pdf">Paper</a>&nbsp;|&nbsp;
                             <a href="https://github.com/DrawingProcess/InfoFusionController">Code</a>&nbsp;|&nbsp;
                             <a href="https://drawingprocess.github.io/InfoFusionController">Project Page</a>
@@ -137,23 +137,23 @@
                     </div>
 
                     <div class="col-md-4 paper-thumbnail">
-                        <img src="data/paper_thumbnail/KSC2024_non-glare-nerf.png" alt="KSC2024_non-glare-nerf" class="img-fluid mx-auto"
+                        <img src="data/paper_thumbnail/KSC2024_Non-Glare-NeRF.png" alt="KSC2024_Non-Glare-NeRF" class="img-fluid mx-auto"
                             style="width: 90%; height: auto; display: block;">
                     </div>
                     <div class="col-md-8 paper-info">
                         <!-- Paper Title -->
-                        non-glare-nerf: 빛의 반사가 강한 표면에서 깊이 왜곡 완화
+                        Non-Glare-NeRF: 빛의 반사가 강한 표면에서 깊이 왜곡 완화
                         <p class="text-muted"><u>Seongjun Choi*</u>, Hyoseok Hwang,
                         </p>
                         <p><em>Korea Software Congress (KSC) 2024</em></p>
                         <p><a href="./data/paper/[KCC 2024] NeRF의 깊이 추정 시 뷰디렉션 설정의 중요성 연구.docx.pdf">Paper</a>&nbsp;|&nbsp;
-                            <a href="https://github.com/DrawingProcess/non-glare-nerf">Code</a>&nbsp;|&nbsp;
-                            <a href="https://drawingprocess.github.io/non-glare-nerf">Project Page</a>
+                            <a href="https://github.com/DrawingProcess/Non-Glare-NeRF">Code</a>&nbsp;|&nbsp;
+                            <a href="https://drawingprocess.github.io/Non-Glare-NeRF">Project Page</a>
                         </p>
                     </div>
 
                     <div class="col-md-4 paper-thumbnail">
-                        <img src="data/paper_thumbnail/KSC2024_codebook-nerf.png" alt="KSC2024_codebook-nerf" class="img-fluid mx-auto"
+                        <img src="data/paper_thumbnail/KSC2024_Codebook-NeRF.png" alt="KSC2024_Codebook-NeRF" class="img-fluid mx-auto"
                             style="width: 90%; height: 130px; display: block;">
                     </div>
                     <div class="col-md-8 paper-info">
@@ -169,7 +169,7 @@
                     </div>
 
                     <div class="col-md-4 paper-thumbnail">
-                        <img src="data/paper_thumbnail/KCC2024_nerf-depth.png" alt="KCC2024_nerf_depth" class="img-fluid mx-auto"
+                        <img src="data/paper_thumbnail/KCC2024_NeRF-Depth.png" alt="KCC2024_NeRF-Depth" class="img-fluid mx-auto"
                             style="width: 90%; height: 130px; display: block;">
                     </div>
                     <div class="col-md-8 paper-info">
