Update: Non-Glare-NeRF Paper

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         <p class="text-muted"><u>Seongjun Choi</u>, Youngbum Kim, Nam Woo Kim, Mansun Shin, Byunggi Chae, Sungjin Lee,
                         </p>
                         <p><em> IEEE 43rd International Conference on Consumer Electronics (ICCE) 2025 (Oral)</em></p>
-                        <p><a href="./data/paper/[KCC 2024] NeRF의 깊이 추정 시 뷰디렉션 설정의 중요성 연구.docx.pdf">Paper</a>&nbsp;|&nbsp;
+                        <p><a href="./data/paper/[KCC 2024] NeRF의-깊이-추정-시-뷰디렉션-설정의-중요성-연구.docx.pdf">Paper</a>&nbsp;|&nbsp;
                             <a href="https://github.com/DrawingProcess/InfoFusionController">Code</a>&nbsp;|&nbsp;
                             <a href="https://drawingprocess.github.io/InfoFusionController">Project Page</a>
                         </p>
@@ -146,7 +146,7 @@
                         <p class="text-muted"><u>Seongjun Choi*</u>, Hyoseok Hwang,
                         </p>
                         <p><em>Korea Software Congress (KSC) 2024</em></p>
-                        <p><a href="./data/paper/[KCC 2024] NeRF의 깊이 추정 시 뷰디렉션 설정의 중요성 연구.docx.pdf">Paper</a>&nbsp;|&nbsp;
+                        <p><a href="./data/paper/[KSC 2024] Non-Glare-NeRF.docx.pdf">Paper</a>&nbsp;|&nbsp;
                             <a href="https://github.com/DrawingProcess/Non-Glare-NeRF">Code</a>&nbsp;|&nbsp;
                             <a href="https://drawingprocess.github.io/Non-Glare-NeRF">Project Page</a>
                         </p>
