--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <p class="text-muted"><u>Seongjun Choi*</u>, Ganghyun Lee*, Jung Uk Kim,
                         </p>
                         <p><em>Korea Software Congress (KSC) 2024</em></p>
-                        <p><a href="./data/paper/[KCC 2024] NeRF의 깊이 추정 시 뷰디렉션 설정의 중요성 연구.docx.pdf">Paper</a>&nbsp;|&nbsp;
+                        <p><a href="./data/paper/[KSC 2024] Codebook-NeRF_ 코드북 기반의 NeRF 해상도 개선.docx.pdf">Paper</a>&nbsp;|&nbsp;
                             <a href="https://github.com/DrawingProcess/Codebook-NeRF">Code</a>&nbsp;|&nbsp;
                             <a href="https://drawingprocess.github.io/Codebook-NeRF">Project Page</a>
                         </p>
