--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                 </p>
                 <!-- <p class=" quote">"Our primary drive in life is not pleasure, but the discovery and pursuit of
                         what we personally find meaningful. (In Man's Search For Meaning)"</p> -->
-                <p style="color: red;">I am actively looking for an internship in Summer 2025. Please contact
+                <!-- <p style="color: red;">I am actively looking for an internship in Summer 2025. Please contact
                     me if you find we are a
-                    good fit.</p>
+                    good fit.</p> -->
                 <div class="links text-center">
                     <a href="mailto:sjchoi.dp@gmail.com">Email</a>
                     <a href="data/resume/CV_en.pdf">CV</a>
@@ -103,11 +103,11 @@
                             A paper about 3D Reconstruction is accepted to <b>KCC 2024</b>.
                         </li>
                         <li>&#x2022;&nbsp (2024.03.) 
-                            I joined Visual AI Lab as a undergraduate researcher at KyungHee University.
+                            I joined <b>Visual AI Lab</b> as a undergraduate researcher at KyungHee University.
                             (<a href="https://sites.google.com/view/jungukkim">Prof. Jung Uk Kim</a>)
                         </li>
                         <li>&#x2022;&nbsp (2024.01.)
-                            I joined ETRI as a researcher in the autonomous driving intelligence lab. (<a href="https://www.linkedin.com/in/jinwoo-kim-836a9b56/">Adviser. JINWOO KIM</a>)
+                            I joined <b><span style="color:#0066A5">ET</span><span style="color:#F15A22">R</span><span style="color:#0066A5">I</span></b> as a researcher in the autonomous driving intelligence lab. (<a href="https://www.linkedin.com/in/jinwoo-kim-836a9b56/">Adviser. JINWOO KIM</a>)
                         </li>
                     </ul>
                 </div>
