--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     good fit.</p> -->
                 <div class="links text-center">
                     <a href="mailto:sjchoi.dp@gmail.com">Email</a>
-                    <a href="data/resume/CV_en.pdf">CV</a>
+                    <a href="data/resume/CV_en_241120.pdf">CV</a>
                     <a href="https://scholar.google.com/citations?user=tuw40H0AAAAJ&hl=en">Google Scholar</a>
                     <a href="https://www.linkedin.com/in/seongjun-choi-60b718205/">Linkedin</a>
                     <a href="https:csj000714.tistory.com">Tech Blog</a>
@@ -130,7 +130,7 @@
                         <p class="text-muted"><u>Seongjun Choi</u>, Youngbum Kim, Nam Woo Kim, Mansun Shin, Byunggi Chae, Sungjin Lee,
                         </p>
                         <p><em> IEEE 43rd International Conference on Consumer Electronics (ICCE) 2025 (Oral)</em></p>
-                        <p><a href="./data/paper/[KCC 2024] NeRF의-깊이-추정-시-뷰디렉션-설정의-중요성-연구.docx.pdf">Paper</a>&nbsp;|&nbsp;
+                        <p><a href="./data/paper/[KCC2024]NeRF의-깊이-추정-시-뷰디렉션-설정의-중요성-연구.docx.pdf">Paper</a>&nbsp;|&nbsp;
                             <a href="https://github.com/DrawingProcess/InfoFusionController">Code</a>&nbsp;|&nbsp;
                             <a href="https://drawingprocess.github.io/InfoFusionController">Project Page</a>
                         </p>
