--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <a href="data/resume/CV_en_241120.pdf">CV</a>
                     <a href="https://scholar.google.com/citations?user=tuw40H0AAAAJ&hl=en">Google Scholar</a>
                     <a href="https://www.linkedin.com/in/seongjun-choi-60b718205/">Linkedin</a>
-                    <a href="https:csj000714.tistory.com">Tech Blog</a>
+                    <a href="https://csj000714.tistory.com">Tech Blog</a>
                 </div>
             </div>
             <div class="col-3">
