Update: I got accepted to M.S. student Yonsei University

--- a/index.html
+++ b/index.html
@@ -62,9 +62,10 @@
                 <h1 class="text-center">Seongjun Choi&nbsp&nbsp<span style="font-family: STXingkai;">최성준</span>
                 </h1>
                 <p>
-                    <!-- I am a CIS PhD student at the University of Pennsylvania starting from Spring 2024,
+                    I am a EE M.S. student at the University of Yonsei starting from Spring 2025,
                     where I have the pleasure to work with 
-                    <a href="https://lingjie0206.github.io/">Prof. Lingjie Liu</a>.  -->
+                    <a href="http://mvp.yonsei.ac.kr/professor/">Prof. Sangyoun Lee</a>. 
+                    I am affiliated with the <a href="http://mvp.yonsei.ac.kr/">MVP Lab</a>.
                     My research interests are computer graphics and computer vision in autonomous driving, 
                     with a focus on 3D/4D generative models and 3D reconstruction.
                 </p>
