Add: KSC2024 Award

--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
                         <p><em>Korea Software Congress (KSC) 2024</em></p>
                         <p><a href="./data/paper/[KSC2024]Codebook-NeRF_코드북-기반의-NeRF-해상도-개선.docx.pdf">Paper</a>&nbsp;|&nbsp;
                             <a href="https://github.com/DrawingProcess/Codebook-NeRF">Code</a>&nbsp;|&nbsp;
-                            <a href="https://drawingprocess.github.io/Codebook-NeRF">Project Page</a>
+                            <a href="https://drawingprocess.github.io/Codebook-NeRF">Project Page</a>&nbsp;|&nbsp;
+                            <a href="./data/award/[KSC2024]Codebook-NeRF_최우수상_수상확인서.pdf" style="color: red;">Award</a>
                         </p>
                     </div>
 
