--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <p><em>Korea Software Congress (KSC) 2024</em></p>
                         <p><a href="./data/paper/[KSC2024]Non-Glare-NeRF.docx.pdf">Paper</a>&nbsp;|&nbsp;
                             <a href="https://github.com/DrawingProcess/Non-Glare-NeRF">Code</a>&nbsp;|&nbsp;
-                            <a href="https://drawingprocess.github.io/Non-Glare-NeRF">Project Page</a>
+                            <a href="https://drawingprocess.github.io/Non-Glare-NeRF">Project Page</a>|&nbsp;
                             <a href="./data/award/[SWCON2024]Non-Glare-NeRF_최우수상_수상확인서.pdf" style="color: red;">Award</a>
                         </p>
                     </div>
