--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="links text-center">
                     <a href="mailto:sjchoi.dp@gmail.com">Email</a>
                     <a href="data/resume/CV_en_SeongjunChoi_250312.pdf">CV</a>
-                    <a href="https://scholar.google.com/citations?user=tuw40H0AAAAJ&hl=en">Google Scholar</a>
+                    <a href="https://scholar.google.com/citations?user=0z2qK-IAAAAJ&hl=en">Google Scholar</a>
                     <a href="https://www.linkedin.com/in/seongjun-choi-60b718205/">Linkedin</a>
                     <a href="https://csj000714.tistory.com">Tech Blog</a>
                 </div>
